Agentforce/force-app/main/default/objects/ScratchOrgResultEvent__e/ScratchOrgResultEvent__e.object-meta.xml
<CustomObject>
    <label>ScratchOrgResultEvent</label>
    <pluralLabel>ScratchOrgResultEvents</pluralLabel>
</CustomObject>