Agentforce/force-app/main/default/objects/ScratchOrgResultEvent__e/fields/OperationStatus__c.field-meta.xml
<CustomField>
    <fullName>OperationStatus__c</fullName>
    <label>OperationStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>