Agentforce/force-app/main/default/objects/ScratchOrgResultEvent__e/fields/OrgAlias__c.field-meta.xml
<CustomField>
    <fullName>OrgAlias__c</fullName>
    <label>OrgAlias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>